<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9A9A9A"
    tools:context=".Pringles2">

    <ImageView
        android:id="@+id/ivPringles"
        android:layout_width="238dp"
        android:layout_height="237dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141"
        app:srcCompat="@drawable/item4" />

    <TextView
        android:id="@+id/tvPringles1"
        android:layout_width="362dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/Pringles3"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPringles"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/tvPringles2"
        android:layout_width="362dp"
        android:layout_height="35dp"
        android:layout_marginTop="14dp"
        android:text="@string/Pringles4"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPringles1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/tvAmount"
        android:textAlignment="viewStart"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPringles2"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:id="@+id/btn_return"
        android:layout_width="87dp"
        android:layout_height="34dp"
        android:layout_marginTop="68dp"
        android:background="#FFC107"
        android:backgroundTint="#FFC107"
        android:fontFamily="monospace"
        android:text="RETURN"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAmount"
        app:layout_constraintVertical_bias="0.15" />

</androidx.constraintlayout.widget.ConstraintLayout>